--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Marriage'
 - !lcc 'HQ'
 - !lcsh 'Family life'
+- GITenberg
 title: 'La Vie en Famille: Comment Vivre à Deux?'
 url: http://www.gutenberg.org/ebooks/39156
